# AiForBharatHack

./: .env.example  .gitignore  .samignore  AWS_ML_DEPLOYMENT.md  ML_MODELS.md  README.md  bucket-policy.json  check_bedrock_models.py  cleanup_and_verify.py  cleanup_duplicates.py  cleanup_old.py  deploy-service.ps1  deploy.ps1  design.md  fix_storage_backend.py  implementation-plan.md  journey_out.txt  pyproject.toml  requirements-local.txt  requirements.md  requirements.txt  seed_cashflow.py  seed_production.py  seed_profiles.py  test_all_ml_models.py  test_apis.py  test_body.json  test_di_integration.py  test_dynamodb_crud.py  test_e2e.py  test_ml_models.py  test_scenarios.py  test_user_journey.py  verify_prod.py
.github/workflows/: ci.yml  deploy.yml
.hypothesis/constants/: 010b2360c080b2cd  0678969a20ae1630  07e6f34a0e0cdb7e  133cb7161960f28e  17ede07af4499013  2426eb2122a97f8b  2432588b99ca236a  2e22d4d668357a7a  340b9a3b21f4c6a5  3ad5a4118dc651bd  3c3ea6430c749a81  3e1ae77dd924f494  40d00c9451ee29ae  42794fc0cf461976  (+31 more)
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
infra/: docker-compose.yml
ml-pipeline/: README.md  __init__.py  requirements.txt  train_all.py
scripts/: setup_local_infra.py
services/shared/: __init__.py  circuit_breaker.py  lineage.py  ml_utils.py  pyproject.toml  requirements.txt
services/shared/ai/: __init__.py
services/shared/auth/: __init__.py  middleware.py
services/shared/encryption/: __init__.py  field_encryption.py
services/shared/events/: __init__.py
services/shared/localization/: __init__.py  catalog_en.py  catalog_hi.py  catalog_kn.py  catalog_mr.py  catalog_ta.py  catalog_te.py
services/shared/models/: __init__.py
services/shared/observability/: __init__.py  middleware.py
services/shared/validation/: __init__.py
(+328 files in other folders)
