[project]
name = "rural-credit-ai-advisor"
requires-python = ">=3.12"

# ── Ruff ──────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line too long
    "B008",   # function-call-in-default-argument (FastAPI Depends is idiomatic)
    "E741",   # ambiguous variable name `l` (common in list comprehensions)
    "RUF002", # ambiguous unicode in docstrings (en-dash is fine)
    "RUF003", # ambiguous unicode in comments (en-dash is fine)
]

[tool.ruff.lint.isort]
known-first-party = ["services"]

# ── Mypy ──────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["services/profile_service/tests", "services/loan_tracker/tests", "services/risk_assessment/tests", "services/cashflow_service/tests", "services/early_warning/tests", "services/guidance/tests", "services/security/tests"]
pythonpath = ["."]
addopts = "-ra -q --ignore=tests/e2e -m 'not e2e'"
markers = [
    "e2e: end-to-end tests requiring running services (deselected by default)",
]
