[project]
name = "rural-credit-shared"
version = "0.1.0"
description = "Shared utilities for the Rural Credit AI Advisor"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34,<2.0",
    "cryptography>=42.0,<44.0",
    "python-jose[cryptography]>=3.3,<4.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
